--- a/my-app/src/components/search.css
+++ b/my-app/src/components/search.css
@@ -3,13 +3,13 @@
 }
 
 .span {
-    display: inline,
+    display: inline !important;
 }
 
 
 .text {
     margin-top: 5px;
-    display: inline;
+    display: inline !important;
 }
 
 .filters {
@@ -26,7 +26,7 @@
     width: 80%;
     align-items: center;
     margin-right: 1rem;
-    display: inline;
+    display: inline !important;
 }
 
 .searchTitle {
